SCISOFT-CORE: change from using new numbers to value of method  * tweak code generator for above change  * improve javadocs of HDF5 classes