@@ -1,12 +1,12 @@
 /*
  * Copyright 2011 Diamond Light Source Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -373,7 +373,7 @@ public class DoubleDataset extends AbstractDataset {
 
 	@Override
 	public Object getObject(final int... pos) {
-		return new Double(get(pos)); // CLASS_TYPE
+		return Double.valueOf(get(pos)); // CLASS_TYPE
 	}
 
 	@Override
